VLC 4: Browse section should include device and drives
currently, one can only browse special folders on Windows and can't access different mounted volumes available on the host device
currently, one can only browse special folders on Windows and can't access different mounted volumes available on the host device
VideoLAN code repository instance